Enable user to create a project
