# src/entity/project.ts
@@ -1,0 +1,17 @@
+import { Entity, PrimaryGeneratedColumn, Column, ManyToOne } from 'typeorm';
+import { User } from './user';
+
+@Entity()
+export class Project {
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ unique: true })
+    title: string;
+
+    @Column({ default: '' })
+    description: string;
+
+    @ManyToOne(type => User, user => user.projects)
+    user: User;
+}
